--- a/index.html
+++ b/index.html
@@ -81,10 +81,19 @@
                         Sin embargo, Draven vuelve a sentirse inquieto. Tiene todo lo que jamás había imaginado y más aún, pero ahora sueña con conseguir que el mundo entero coree su nombre.</h4></p>
                         <hr>
                         <br>
-                        <h1>Draven Dentro De League Of legends</h1>
             </div>
             <div id="section-2">
-
+                <h1>Draven Dentro De League Of legends</h1>
+                <h2>Build Optima De darven</h2>
+                <div>Primer Item</div>
+                <img src="Imagenes/Bloodthirster.png" alt="Sanguinaria" width="100" height="100"/> 
+                <div>Botas</div>
+                <img src="Imagenes/berserker.webp" alt="Botas de berserker" width="100" height="100" />
+                <div>Segundo Item</div>
+                <img src="Imagenes/matakrakens.webp" alt="Matakrakens" width="100" height="100" />
+                <div>Tercer Item</div>
+                <img src="Imagenes/Infinito.webp" alt="Filo del Infinito" width="100" height="100" />
+                <div>Items Situacionales</div>
             </div>
         </div>
     </div>
@@ -92,7 +101,7 @@
 
     </div>
     <div id="footer">
-        <p> © 2022, wasa</p>
+        <p> © 2023, wasa</p>
     </div>
 </body>
 </html> 
