Runas,mas items y estadisticas base

--- a/index.html
+++ b/index.html
@@ -11,6 +11,20 @@
 
     <!-- Incorpora el usa de spans -->
     <link rel="stylesheet" href="estilos4.css">
+    
+    <style>
+        table th, table td{
+        border: 1px solid green;
+    }
+    tfoot{
+        background-color: orange;
+    }
+    thead{
+      background-color: blue;  
+      color: white;
+    }
+
+</style>
 </head>
 <body>
     <div id="header">
@@ -84,7 +98,7 @@
             </div>
             <div id="section-2">
                 <h1>Draven Dentro De League Of legends</h1>
-                <h2>Build Optima De darven</h2>
+                <h2>Build Optima De draven</h2>
                 <div>Primer Item</div>
                 <img src="Imagenes/Bloodthirster.png" alt="Sanguinaria" width="100" height="100"/> 
                 <div>Botas</div>
@@ -94,6 +108,50 @@
                 <div>Tercer Item</div>
                 <img src="Imagenes/Infinito.webp" alt="Filo del Infinito" width="100" height="100" />
                 <div>Items Situacionales</div>
+                <img src="Imagenes/canon de fuego rapido.png" alt="Fuego rapido" width="100" height="100" />
+                <img src="Imagenes/LordDominik.webp" alt="Dominik" width="100" height="100" />
+                <img src="Imagenes/saqueador de essenias.png" alt="Saqueador" width="100" height="100" />
+            </div>
+            <div id="section-3">
+                <h2>Runas Para Draven</h2>
+                <img src="Imagenes/Runas.PNG" alt="Runas" width="500" height="500">
+            </div>
+            <div id="section-4">
+                <table>
+                    <caption>Estadisticas base del campeon</caption>
+                    <thead>
+                        <tr>    
+                            <th scope="col" colspan="2" rowspan="1">Estadisticas Base</th>   
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>Vida = 675</td>
+                            <td>Mana = 361</td>
+                        </tr>
+                        <tr>
+                            <td>Regeneracion Base de Vida = 3.75</td>
+                            <td>Regeneracion Base de mana = 8.05</td>
+                        </tr>
+                        <tr>
+                            <td>Armadura=29</td>
+                            <td>Dano de ataque = 62</td>
+                        </tr>
+                        <tr>
+                            <td>Resistencia Magica = 30 </td>
+                            <td>Dano Critico = 175%</td>
+                        </tr>
+                        <tr>
+                            <td>Velocidad De Movimiento = 330</td>
+                            <td>Rango de Ataque = 550</td>
+                        </tr>
+                        <tr>
+                            <td>Base = 0.679</td>
+                            <td>Velocidad de Misil = 1600</td>
+                        </tr>
+
+                    </tbody>
+                </table>
             </div>
         </div>
     </div>
